--- a/Annotator/vmqt/SConstruct
+++ b/Annotator/vmqt/SConstruct
@@ -49,6 +49,7 @@ env['QT4_UICDECLSUFFIX'] = '.hxx'
 env['QT4_MOCHPREFIX'] = os.path.join('generated','moc_')
 env['QT4_UICDECLPREFIX'] = os.path.join('generated','uic_')
 env['QT4_QRCCXXPREFIX'] = os.path.join('generated','qrc_')
+env['OBJPREFIX'] = 'generated/'
 if not env['verbose']:
 	env['CXXCOMSTR'] = '== Compiling $SOURCE'
 	env['SHCXXCOMSTR'] = '== Compiling shared $SOURCE'
