--- a/Annotator/SConstruct
+++ b/Annotator/SConstruct
@@ -171,7 +171,7 @@ fftwlib = "fftw3"
 fftwlibpath = [os.path.join(env['prefix'],'lib')]
 sndfilelib = 'sndfile'
 programs += [ env.Program(target='OnsetExtractorCore', source = onsetSources, LIBS=[fftwlib,sndfilelib], LIBPATH=fftwlibpath) ]
-programs += [ 'OnsetExtractor.py' ]
+programs += [ 'OnsetExtractor' ]
 
 env.Uic4(source="SimacServicesClient/GUI.ui")
 bocaClientSources = [
