--- a/trunk/Chordata/debian/control
+++ b/trunk/Chordata/debian/control
@@ -1,4 +1,4 @@
-Source: clam-turnaround
+Source: clam-chordata
 Section: sound
 Priority: optional
 Maintainer: CLAM Team <clam@iua.upf.edu>
@@ -6,11 +6,11 @@ Homepage: http://clam.iua.upf.edu
 Build-Depends: debhelper (>= 5.0.0), scons, libclam-dev, qt4-dev-tools, libqt4-dev, libqt4-dev (<4.4) | libqt4-opengl-dev, docbook-to-man, imagemagick
 Standards-Version: 3.8.0
 
-Package: clam-turnaround
+Package: clam-chordata
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: CLAM Turnaround, chord detection tool
- CLAM Turnaround is a chord detection tool that can be used to
+Description: CLAM Chordata, chord detection tool
+ CLAM Chordata is a chord detection tool that can be used to
  browse the chords of your favourite mp3/ogg/wav music.
  You can freely move arround the song, listening and 
  getting insight of its tonal features by using several
