--- a/trunk/CLAM/plugins/GuitarEffects/SConstruct
+++ b/trunk/CLAM/plugins/GuitarEffects/SConstruct
@@ -8,6 +8,7 @@ libPaths = [
 	('dcremoval', 'DCRemoval'),
 	('audioswitch', 'AudioSwitch'),
 	('automaticgaincontrol', 'AutomaticGainControl'),
+	('timedelay', 'TimeDelay'),
 ]
 
 def scanFiles(pattern, paths) :
