--- a/trunk/CLAM/test/NonPortedTests/SConstruct
+++ b/trunk/CLAM/test/NonPortedTests/SConstruct
@@ -62,7 +62,7 @@ env.EnableClamModules([
 	], CLAMInstallDir)
 
 mainSources = {
-	'Turnaround' : os.path.join('src','main.cxx'),
+	'Chordata' : os.path.join('src','main.cxx'),
 }
 
 sourcePaths = [
@@ -82,12 +82,12 @@ sources = unique(sources)
 env.Append(CPPPATH=includePaths)
 #env.Prepend(LIBS="clam_vmqt4")
 if sys.platform=='darwin' :
-	env.Append(CPPFLAGS='-DRESOURCES_BASE="\\"Turnaround.app/Contents/Resources\\""')
+	env.Append(CPPFLAGS='-DRESOURCES_BASE="\\"Chordata.app/Contents/Resources\\""')
 else :
-	env.Append(CPPFLAGS='-DRESOURCES_BASE="\\"' + env['prefix'] + '/share/turnaround\\""')
+	env.Append(CPPFLAGS='-DRESOURCES_BASE="\\"' + env['prefix'] + '/share/chordata\\""')
 if sys.platform!='win32' :
 	# TODO: This should not be hardcoded neither prefix (because package intall)
-	env.Append(CPPFLAGS='-DDATA_EXAMPLES_PATH="\\"%s\\""'%env['prefix'] + '/share/turnaround/example-data')
+	env.Append(CPPFLAGS='-DDATA_EXAMPLES_PATH="\\"%s\\""'%env['prefix'] + '/share/chordata/example-data')
 
 if sys.platform=='linux2' :
 	if env['release'] :
@@ -95,7 +95,7 @@ if sys.platform=='linux2' :
 	else :
 		env.Append( CCFLAGS=['-g','-O3','-Wall'] )
 
-#commonObjects = env.StaticLibrary(target="turnaround", source=sources)
+#commonObjects = env.StaticLibrary(target="chordata", source=sources)
 programs = [ env.Program(source = source)
 	for source in sources]
 
@@ -140,25 +140,25 @@ if isWindowsPlatform :
 
 if sys.platform=='darwin' :
 	# TODO: Review why those flags were added# TODO: Review why those flags were added# TODO: Review why those flags were added
-	env.Append(CPPFLAGS='-DRESOURCES_BASE="\\"Turnaround.app/Contents/Resources\\""')
+	env.Append(CPPFLAGS='-DRESOURCES_BASE="\\"Chordata.app/Contents/Resources\\""')
 	env.AppendUnique( LINKFLAGS=['-dynamic','-bind_at_load'])
 
 	#TODO install resources
 	installTargets = []
 	
 	mac_bundle = env.Bundle( 
-		BUNDLE_NAME='Turnaround', 
+		BUNDLE_NAME='Chordata', 
 		BUNDLE_BINARIES=programs,
 	#	BUNDLE_RESOURCEDIRS=['foo','bar'],
 		BUNDLE_PLIST='resources/Info.plist',
-		BUNDLE_ICON='resources/CLAM-Turnaround.icns',
+		BUNDLE_ICON='resources/CLAM-Chordata.icns',
 	 )
 	env.Alias('bundle', mac_bundle)
 
 	#TODO mac_bundle should be dependency of Dmga:	
 	arch = os.popen("uname -p").read().strip()
-	mac_packages = env.Dmg('CLAM_Turnaround-%s-%s.dmg'% (fullVersion, arch), [
-		env.Dir('Turnaround.app/'),
+	mac_packages = env.Dmg('CLAM_Chordata-%s-%s.dmg'% (fullVersion, arch), [
+		env.Dir('Chordata.app/'),
 		env.Dir('example-data/'),
 	]+installTargets )
 	env.Alias('package', mac_packages)
