--- a/trunk/SMSTools/debian/control
+++ b/trunk/SMSTools/debian/control
@@ -2,7 +2,7 @@ Source: clam-smstools
 Section: sound
 Priority: optional
 Maintainer: CLAM Team <clam@iua.upf.edu>
-Homepage: http://clam.iua.upf.edu
+Homepage: http://clam-project.org
 Build-Depends: debhelper (>= 5.0.0), scons, libclam-dev, libqt3-headers, libqt3-mt-dev, docbook-to-man, imagemagick
 Standards-Version: 3.8.0
 
