--- a/packaging/SMSTools/debian/control
+++ b/packaging/SMSTools/debian/control
@@ -1,7 +1,7 @@
 Source: clam-smstools
 Section: sound
 Priority: optional
-Maintainer: CLAM Team <clam@iua.upf.edu>
+Maintainer: CLAM Team <developers@clam-project.org>
 Homepage: http://clam-project.org
 Build-Depends: debhelper (>= 5.0.0), scons, libclam-dev, libqt3-headers, libqt3-mt-dev, docbook-to-man, imagemagick
 Standards-Version: 3.8.0
