--- a/trunk/packaging/Annotator/debian/control
+++ b/trunk/packaging/Annotator/debian/control
@@ -1,7 +1,7 @@
 Source: clam-annotator
 Section: sound
 Priority: optional
-Maintainer: CLAM Team <clam@iua.upf.edu>
+Maintainer: CLAM Team <developers@clam-project.org>
 Homepage: http://clam-project.org
 Build-Depends: debhelper (>= 5.0.0), scons, libclam-dev, qt4-dev-tools, libqt4-dev, libqt4-dev (<4.4) | libqt4-opengl-dev, docbook-to-man, imagemagick
 Standards-Version: 3.8.0
