--- a/packaging/Annotator/debian/control
+++ b/packaging/Annotator/debian/control
@@ -3,7 +3,7 @@ Section: sound
 Priority: optional
 Maintainer: CLAM Team <developers@clam-project.org>
 Homepage: http://clam-project.org
-Build-Depends: debhelper (>= 5.0.0), scons, libclam-dev, qt4-dev-tools, libqt4-dev, libqt4-dev (<4.4) | libqt4-opengl-dev, docbook-to-man, imagemagick
+Build-Depends: debhelper (>= 5.0.0), scons, libclam-dev, qt4-dev-tools, libqt4-dev, libqt4-dev (<4.4) | libqt4-opengl-dev, docbook-to-man, imagemagick, python
 Standards-Version: 3.8.0
 
 Package: clam-annotator
