--- a/CLAM/plugins/spacialization/SConstruct
+++ b/CLAM/plugins/spacialization/SConstruct
@@ -41,8 +41,8 @@ sources = scanFiles('*.cxx', sourcePaths)
 sources = dict.fromkeys(sources).keys()
 if sys.platform=='linux2' :
 	env.Append( CCFLAGS=['-g','-O3','-Wall'] )
-	print "adding optimization flags"
 	"""
+	print "adding optimization flags"
 	env.Append( CCFLAGS=[
 		'-fomit-frame-pointer', 
 		'-ffast-math',
@@ -76,14 +76,14 @@ libraries = [
 tests = [
 	env.Program("UnitTests", scanFiles("*.cxx", ['tests'])),
 	]
-runTests = Command("UnitTests.passed",tests, "LD_LIBRARY_PATH=/home/pau.arumi/local/lib ./UnitTests")
+runTests = Command("UnitTests.passed",tests, "LD_LIBRARY_PATH=%s ./UnitTests"%env['ENV']['LD_LIBRARY_PATH'])
 
 examples = scanFiles('*.clamnetwork', ['example-data'])
 examples+= scanFiles('*.ui', ['example-data'])
 
 install = [
 	env.Install(os.path.join(InstallDir,'lib','clam'), libraries),
-	env.Install(os.path.join(InstallDir,'share','networkeditor','example-data'), examples)
+#	env.Install(os.path.join(InstallDir,'share','networkeditor','example-data'), examples)
 	]
 
 env.Alias('install', install)
