--- a/CLAM/plugins/sndfile/SConstruct
+++ b/CLAM/plugins/sndfile/SConstruct
@@ -12,16 +12,20 @@ def recursiveDirs(root) :
 	return filter( (lambda a : a.rfind( ".svn")==-1 ),  [ a[0] for a in os.walk(root)]  )
 
 options = Options('options.cache', ARGUMENTS)
-options.Add(PathOption('clam_prefix', 'The prefix where CLAM was installed', '/bad/path'))
+options.Add(PathOption('clam_prefix', 'The prefix where CLAM was installed', ''))
+options.Add(PathOption('prefix', 'Installation prefix (normally /usr, by default this is clam_prefix)', "", validator=PathOption.PathAccept))
 if sys.platform=='linux2' :
 	options.Add(BoolOption('crossmingw', 'Activates the MinGW Windows crosscompiling mode', 'no'))
 
-env = Environment(ENV=os.environ, options=options)
+toolChain = 'default'
+if sys.platform == "win32": toolChain = 'mingw'
+env = Environment(ENV=os.environ, tools=[toolChain], options=options)
 options.Save('options.cache', env)
 Help(options.GenerateHelpText(env))
 env.SConsignFile() # Single signature file
 
 CLAMInstallDir = env['clam_prefix']
+InstallDir = env['prefix'] or env['clam_prefix']
 clam_sconstoolspath = os.path.join(CLAMInstallDir,'share','clam','sconstools')
 if env['crossmingw'] :
 	env.Tool('crossmingw', toolpath=[clam_sconstoolspath])
@@ -41,7 +45,7 @@ libraries = [
 	env.SharedLibrary(target=libraryName, source = sources),
 	]
 
-install = env.Install(os.path.join(CLAMInstallDir,'lib','clam'), libraries)
+install = env.Install(os.path.join(InstallDir,'lib','clam'), libraries)
 
 env.Alias('install', install)
 env.Default(libraries)
