* UnitTests: SConscript was still missing a XMLAdaptersTests -> XmlTest directory renaming

--- a/CLAM/test/UnitTests/SConscript
+++ b/CLAM/test/UnitTests/SConscript
@@ -30,7 +30,7 @@ folders = [
 	os.path.join('StandardTests'),
 	os.path.join('TonalAnalysis'),
 	os.path.join('ToolsTests'),
-	os.path.join('XMLAdaptersTests'),
+	os.path.join('XmlTests'),
 	os.path.join('VisualizationTests'),
 	]
 
